# hh-to-bbtautau-tau-hlt-efficiency-studies

./: .gitignore  README.md
Process_EB_AODs/: README.md  kl01_mc21.root  log_with_btagging_container accessor.txt  makefriends.py
Process_EB_AODs/run/: .__afs00B6  .__afs5A2  .__afsBB5  kl01_mc21.root
Process_EB_AODs/source/: CMakeLists.txt
Process_EB_AODs/source/MyAnalysis/share/: ATestRunLocal_jobOptions.py
Process_MC_AODs/: PoolFileCatalog.xml  README.md  athloginr22.sh  athsetupLatest.sh  athsetupr22.sh
Process_MC_AODs/run/: PoolFileCatalog.xml  gridrun.sh  localrun.sh
Process_MC_AODs/source/: CMakeLists.txt
Process_MC_AODs/source/MyAnalysis/: CMakeLists.txt
Process_MC_AODs/source/MyAnalysis/MyAnalysis/: MyxAODAnalysis.h
Process_MC_AODs/source/MyAnalysis/share/: jobOptions.py  (+1 more)
Process_Rate_AODs/: athsetupr22.sh  log_with_HLT_AntiKt4EMPFlowJets_subresjesgscIS_ftf_bJets.txt  log_without_HLT_AntiKt4EMPFlowJets_subresjesgscIS_ftf_bJets.txt
Process_Rate_AODs/run/: PoolFileCatalog.xml  gridrun.sh
Process_Rate_AODs/source/MyAnalysis/: CMakeLists.txt
Process_Rate_AODs/source/MyAnalysis/MyAnalysis/: MyxAODAnalysis.h
Process_Rate_AODs/source/MyAnalysis/Root/: MyxAODAnalysis.cxx
Process_Rate_AODs/source/MyAnalysis/share/: ATestRunLocal_jobOptions.py
b+tau_trigger/Efficiency_analysis/: Emulate_efficiency_b+tau.py  Trigger_functions.py
di_tau_trigger/Efficiency_analysis/: Emulate_efficiency_4J12.py  Emulate_efficiency_L1Topo.py  Trigger_functions.py
di_tau_trigger/Rates_analysis/: Emulate_rate_4J12.py  Emulate_rate_L1Topo.py  Trigger_functions.py
(+2 files in other folders)
